fix code smell