@@ -8,7 +8,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -34,7 +33,7 @@ public class PharmacySocialnaDataProvider implements DataProvider {
     private List<String> generateAllUrls() {
         return IntStream.rangeClosed(1, pagesLimit)
                 .mapToObj((int i) -> pharmacySocialnaBaseUrl + "?p=" + i)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
